test/functions/promotion/issue-12736-error1.chpl

var D: domain(string);
writeln(D.length);
